Remove compiled jar