@@ -1,5 +1,5 @@
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
-
+import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
 
 plugins {
     alias(libs.plugins.kotlinMultiplatform)
@@ -10,7 +10,7 @@ plugins {
 
 kotlin {
     jvm()
-    
+
     sourceSets {
         commonMain.dependencies {
             implementation(libs.compose.runtime)
@@ -28,21 +28,36 @@ kotlin {
         jvmMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutinesSwing)
-            implementation(files("libs/java-smartcardio.jar"))
             implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3")
         }
     }
 }
 
+tasks.withType<KotlinJvmCompile>().configureEach {
+    compilerOptions {
+        freeCompilerArgs.add("-Xjdk-release=21")
+        freeCompilerArgs.add("-Xadd-modules=java.smartcardio")
+    }
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--add-modules=java.smartcardio")
+}
 
 compose.desktop {
     application {
         mainClass = "com.example.nps_nfc_desktop.MainKt"
 
+        jvmArgs(
+            "--add-modules=java.smartcardio"
+        )
+
         nativeDistributions {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "com.example.nps_nfc_desktop"
             packageVersion = "1.0.0"
+
+            modules("java.smartcardio")
         }
     }
 }
